// SEPOMEX CDMX — Modelo lógico (3FN). Fuente: db/01_schema.sql
// Diagrama renderizado: docs/db2-sepomex.png (.svg vectorial).
// Charset canónico: utf8mb4 / utf8mb4_spanish_ci (se declara en DDL).
// Lote: 1 estado, 16 municipios, 16 ciudades, 6 tipos, 45 oficinas,
//       1110 CP, 1531 asentamientos.

Project sepomex {
  database_type: 'MySQL'
  Note: 'Catálogo SEPOMEX CDMX normalizado a 3FN. Grano: asentamiento (cp, nombre, tipo).'
}

Table estado {
  id smallint [pk, increment]
  nombre varchar(60) [unique, not null]
}

Table municipio {
  id smallint [pk, increment]
  estado_id smallint [not null, ref: > estado.id]
  nombre varchar(60) [not null]

  indexes {
    (estado_id, nombre) [unique]
  }
}

Table ciudad {
  id smallint [pk, increment]
  municipio_id smallint [not null, ref: > municipio.id]
  nombre varchar(60) [not null]

  indexes {
    (municipio_id, nombre) [unique]
  }

  Note: 'Cuelga de municipio para la cadena estado→municipio→ciudad→cp→asentamiento.'
}

Table tipo_asentamiento {
  id tinyint [pk, increment]
  nombre varchar(30) [unique, not null]
  Note: 'Colonia, Barrio, Pueblo, Equipamiento, Campamento, Aeropuerto.'
}

Table oficina_postal {
  clave char(5) [pk]
  Note: '45 claves en el lote. El origen no trae nombre de oficina.'
}

Table codigo_postal {
  cp char(5) [pk, note: 'Conserva ceros a la izquierda. 1110 en el lote.']
  municipio_id smallint [not null, ref: > municipio.id]
  ciudad_id smallint [not null, ref: > ciudad.id]
  oficina_clave char(5) [not null, ref: > oficina_postal.clave]
}

Table asentamiento {
  id int [pk, increment]
  cp char(5) [not null, ref: > codigo_postal.cp]
  tipo_id tinyint [not null, ref: > tipo_asentamiento.id]
  nombre varchar(80) [not null]

  indexes {
    (cp, nombre, tipo_id) [unique]
  }

  Note: '1531 filas. (cp,nombre,tipo): 4 nombres repetidos con distinto tipo.'
}

Table stg_sepomex_raw {
  codigo_postal varchar(10)
  estado varchar(60)
  municipio varchar(60)
  ciudad varchar(60)
  tipo_asentamiento varchar(30)
  asentamiento varchar(80)
  clave_oficina varchar(10)
  Note: 'Staging ETL: recibe el CSV UTF-8 tal cual (LOAD DATA). Sin PK/FK.'
}
